Ambit logo aspect ratio corrected, footer text should be better visible.

--- a/fastox-www/src/main/webapp/style/global.css
+++ b/fastox-www/src/main/webapp/style/global.css
@@ -34,7 +34,7 @@ div.footer, span.right {
 	text-align: right;
 	font-size: 8pt;
 	background-color: #FFFFFF;
-	color: #ebebeb;
+	color: #A0A0A0;
 	font-family: Verdana, Arial;
 	width: 100%;
 }
